# canary-mlx

./: LICENSE  MANIFEST.in  README.md  convert_nemo.py  pyproject.toml
canary_mlx/: __init__.py  alignment.py  audio.py  cache.py  decoder.py  encoder.py  model.py  tokenizer.py
